--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -1,27 +1,11 @@
-name: Build and deploy
-on:
-  push:
-    branches:
-      - main
+name: main
+
+on: push
+
 jobs:
-  build_and_deploy:
-    name: Build, push and deploy
-    runs-on: ubuntu-latest
+  build-and-deploy:
     permissions:
       contents: read
       id-token: write
-    steps:
-      - uses: actions/checkout@v4
-      - name: Push docker image to GAR
-        uses: nais/docker-build-push@v0
-        id: docker-build-push
-        with:
-          team: teamsykefravr
-          identity_provider: ${{ secrets.NAIS_WORKLOAD_IDENTITY_PROVIDER }} # Provided as Organization Secret
-          project_id: ${{ vars.NAIS_MANAGEMENT_PROJECT_ID }} # Provided as Organization Variable
-      - name: Deploy to NAIS
-        uses: nais/deploy/actions/deploy@v2
-        env:
-          CLUSTER: dev-gcp
-          RESOURCE: .nais/app.yaml # This points to the file we created in the previous step
-          VAR: image=${{ steps.docker-build-push.outputs.image }}
+    uses: navikt/isworkflows/.github/workflows/kotlin-build-deploy.yml@master
+    secrets: inherit
