IS-2087: Add outbund rule to pdfgen

--- a/.nais/naiserator-dev.yaml
+++ b/.nais/naiserator-dev.yaml
@@ -48,6 +48,7 @@ spec:
         - host: "login.microsoftonline.com"
       rules:
         - application: istilgangskontroll
+        - application: isarbeidsuforhetpdfgen
   azure:
     application:
       allowAllUsers: true
