--- a/.editorconfig
+++ b/.editorconfig
@@ -1,4 +1,4 @@
 root = true
 
 [*.{kt,kts}]
-ktlint_disabled_rules = no-wildcard-imports
+ktlint_disabled_rules = no-wildcard-imports, trailing-comma-on-call-site, trailing-comma-on-declaration-site
