add main branch to workflows

--- a/.github/workflows/dependency-submission.yaml
+++ b/.github/workflows/dependency-submission.yaml
@@ -2,7 +2,7 @@ name: Gradle dependency submission
 on:
   push:
     branches:
-      - master
+      - main
     paths:
       - "**.gradle.kts"
   workflow_dispatch:
