IS-2091: Add kafka environment and producer config

--- a/.nais/naiserator-dev.yaml
+++ b/.nais/naiserator-dev.yaml
@@ -60,6 +60,8 @@ spec:
       claims:
         extra:
           - "NAVident"
+  kafka:
+    pool: nav-dev
   env:
     - name: KTOR_ENV
       value: "production"
