--- a/.nais/naiserator-prod.yaml
+++ b/.nais/naiserator-prod.yaml
@@ -60,6 +60,8 @@ spec:
       claims:
         extra:
           - "NAVident"
+  kafka:
+    pool: nav-prod
   env:
     - name: KTOR_ENV
       value: "production"
