--- a/.nais/naiserator-prod.yaml
+++ b/.nais/naiserator-prod.yaml
@@ -44,6 +44,8 @@ spec:
     outbound:
       external:
         - host: "login.microsoftonline.com"
+        - host: "pdl-api.prod-fss-pub.nais.io"
+        - host: "dokarkiv.prod-fss-pub.nais.io"
       rules:
         - application: istilgangskontroll
         - application: isarbeidsuforhetpdfgen
@@ -73,5 +75,9 @@ spec:
       value: "prod-fss.pdl.pdl-api"
     - name: PDL_URL
       value: "https://pdl-api.prod-fss-pub.nais.io/graphql"
+    - name: DOKARKIV_CLIENT_ID
+      value: "prod-fss.teamdokumenthandtering.dokarkiv"
+    - name: DOKARKIV_URL
+      value: "https://dokarkiv.prod-fss-pub.nais.io"
     - name: TOGGLE_PUBLISH_FORHANDSVARSEL
       value: "false"
