IS-2094-4: Fix branch name in kafka workflow file.

--- a/.github/workflows/kafka-arbeidsuforhet.yaml
+++ b/.github/workflows/kafka-arbeidsuforhet.yaml
@@ -3,7 +3,7 @@ name: kafka
 on:
   push:
     branches:
-      - master
+      - main
     paths:
       - '.github/workflows/kafka-arbeidsuforhet.yaml'
       - '.nais/kafka/**'
