IS-2154: Kortere svarfrist i dev-gcp

--- a/.nais/naiserator-prod.yaml
+++ b/.nais/naiserator-prod.yaml
@@ -67,6 +67,8 @@ spec:
   env:
     - name: KTOR_ENV
       value: "production"
+    - name: SVARFRIST_DAYS
+      value: "21"
     - name: ISTILGANGSKONTROLL_CLIENT_ID
       value: "prod-gcp.teamsykefravr.istilgangskontroll"
     - name: ISTILGANGSKONTROLL_URL
