--- a/.nais/naiserator-dev.yaml
+++ b/.nais/naiserator-dev.yaml
@@ -67,7 +67,7 @@ spec:
   env:
     - name: KTOR_ENV
       value: "production"
-    - name: SVARFRIST_DAYS
+    - name: SVARFRIST_DAGER
       value: "1"
     - name: ISTILGANGSKONTROLL_CLIENT_ID
       value: "dev-gcp.teamsykefravr.istilgangskontroll"
