--- a/.nais/naiserator-dev.yaml
+++ b/.nais/naiserator-dev.yaml
@@ -48,7 +48,7 @@ spec:
         - host: "dokarkiv.dev-fss-pub.nais.io"
       rules:
         - application: istilgangskontroll
-        - application: isarbeidsuforhetpdfgen
+        - application: ispdfgen
   gcp:
     sqlInstances:
       - type: POSTGRES_15
