--- a/.nais/kafka/arbeidsuforhet-vurdering.yaml
+++ b/.nais/kafka/arbeidsuforhet-vurdering.yaml
@@ -25,6 +25,9 @@ spec:
     - team: teamsykefravr
       application: ispersonoppgave
       access: read
+    - team: teamsykefravr
+      application: syfooversiktsrv
+      access: read
     - team: disykefravar
       application: dvh-sykefravar-airflow-kafka
       access: read
