--- a/.nais/kafka/arbeidsuforhet-expired-varsel.yaml
+++ b/.nais/kafka/arbeidsuforhet-expired-varsel.yaml
@@ -2,6 +2,7 @@ apiVersion: kafka.nais.io/v1
 kind: Topic
 metadata:
   annotations:
+    kafka.nais.io/removeDataWhenResourceIsDeleted: "true"
     dcat.data.nav.no/title: "Utgatt forhåndsvarsel om avslag på sykepenger for arbeidsuforhet sykmeldte personer"
     dcat.data.nav.no/description: >-
       Topic inneholder informasjon om et forhåndsvarsel der svarfrist har gatt ut.
